# Cognity-AI

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
cognity_ai/: __init__.py  factory.py  library.py  registry.py
cognity_ai/chunkers/: __init__.py  base.py  fixed.py  hybrid.py  parent_child.py  recursive.py  semantic.py  sentence.py
cognity_ai/config/: __init__.py  base.py  providers.py
cognity_ai/embedders/: __init__.py  azure_openai.py  base.py  bedrock.py  cohere.py  gemini.py  ollama.py  openai.py  sentence_transformers.py  vertex_ai.py
cognity_ai/extractors/: __init__.py  base.py  hybrid.py  llm.py  nlp.py
cognity_ai/generators/: __init__.py  anthropic.py  azure_openai.py  base.py  bedrock.py  cohere.py  gemini.py  ollama.py  openai.py  vertex_ai.py
cognity_ai/loaders/: __init__.py  base.py  csv.py  docx.py  excel.py  factory.py  html.py  image.py  json_loader.py  pdf.py  pdf_utils.py  pptx.py  text.py
cognity_ai/models/: __init__.py  retrieval.py
cognity_ai/multimodal/: __init__.py
cognity_ai/multimodal/embedders/: __init__.py  base.py  blip2.py  clip.py  imagebind.py  siglip.py
cognity_ai/multimodal/loaders/: __init__.py  audio.py  video.py
cognity_ai/multimodal/models/: __init__.py  media.py
cognity_ai/multimodal/pipeline/: __init__.py  audio_pipeline.py  image_pipeline.py  video_pipeline.py
cognity_ai/multimodal/retrievers/: __init__.py  audio_retriever.py  base.py  cross_modal.py  image_retriever.py  video_retriever.py
cognity_ai/multimodal/stores/: __init__.py  base.py  chroma_mm.py  qdrant_mm.py
cognity_ai/multimodal/transcribers/: __init__.py  aws_transcribe.py  base.py  google_stt.py  whisper_api.py  whisper_local.py
cognity_ai/observability/: __init__.py  base_observer.py  collector.py  logging_observer.py  models.py  noop_observer.py  token_tracker.py
cognity_ai/ocr/: __init__.py  anthropic_vision.py  azure_vision.py  bedrock_vision.py  factory.py  gemini_vision.py  openai_vision.py  tesseract.py
cognity_ai/page_index/: __init__.py  base.py  hybrid_index.py  json_store.py  regex_index.py  structural_index.py
cognity_ai/pipeline/: __init__.py  ingestion.py  knowledge_updater.py
cognity_ai/retrievers/: __init__.py  adaptive.py  base.py  graph_only.py  hybrid_graph.py  microsoft_graphrag.py  multi_query.py  naive.py  parent_child.py  vector_only.py
cognity_ai/stores/: __init__.py
cognity_ai/stores/graph/: __init__.py  arangodb.py  base.py  memgraph.py  microsoft_graphrag.py  neo4j.py  networkx.py
cognity_ai/stores/vector/: __init__.py  azure_search.py  base.py  chroma.py  faiss.py  (+5 more)
cognity_ai/utils/: __init__.py  hash.py  rrf.py  trie.py
docs/: CNAME  architecture.html  changelog.html  getting-started.html  index.html
docs/api/: chunkers.html  config.html  embedders.html  generators.html  index.html  loaders.html  ocr.html  rag-library.html  retrievers.html  stores.html
docs/assets/: style.css
hybrid_rag/: config.py  gemini_extractor.py  graph_manager.py  hybrid_retriever.py  ingestion.py  knowledge_updater.py  main.py  models.py  nlp_processor.py  page_index.py  requirements.txt  vector_manager.py
raglib/: __init__.py  factory.py  library.py
raglib/chunkers/: __init__.py  base.py  fixed.py  hybrid.py  parent_child.py  recursive.py  semantic.py  sentence.py
raglib/config/: __init__.py  base.py
raglib/embedders/: __init__.py  azure_openai.py  bedrock.py  cohere.py  gemini.py  ollama.py  openai.py  sentence_transformers.py  vertex_ai.py
raglib/extractors/: __init__.py  base.py  hybrid.py  llm.py  nlp.py
raglib/generators/: __init__.py  anthropic.py  azure_openai.py  bedrock.py  cohere.py  gemini.py  ollama.py  openai.py  vertex_ai.py
raglib/loaders/: __init__.py  base.py  csv.py  docx.py  excel.py  factory.py  html.py  image.py  json_loader.py  pdf.py  pptx.py  text.py
raglib/models/: __init__.py  document.py  knowledge.py  retrieval.py
raglib/multimodal/: __init__.py
raglib/ocr/: __init__.py  anthropic_vision.py  azure_vision.py  base.py  bedrock_vision.py  factory.py  gemini_vision.py  openai_vision.py  tesseract.py
raglib/page_index/: __init__.py  base.py  hybrid_index.py  json_store.py  regex_index.py  structural_index.py
raglib/pipeline/: __init__.py  ingestion.py  knowledge_updater.py
raglib/retrievers/: __init__.py  adaptive.py  base.py  graph_only.py  hybrid_graph.py  microsoft_graphrag.py  multi_query.py  naive.py  parent_child.py  vector_only.py
raglib/stores/: __init__.py
raglib/utils/: __init__.py  hash.py  rrf.py  token_counter.py
tests/: conftest.py  test_chunkers.py  test_config.py  test_embedders.py  test_factory.py  test_generators.py  test_graph_stores.py  test_loaders.py  test_models.py  test_observability.py  test_trie.py  test_utils.py  test_vector_stores.py
(+45 files in other folders)
